--- a/css/header.css
+++ b/css/header.css
@@ -97,25 +97,40 @@
   /*Rechercher :*/
 
   #search {
-    margin: 0 0 0 74%;
-    padding: 20px 0 0 0;
-    width: 25%;
-    height: 30px;
+    float: right;
+    margin: 10px 10% 0 0;
+    padding: 0;
+    width: 30%;
+    height: 20px;
   }
 
   #iSearch {
-    float: left;
-    width: 60%;
-    height: 20px
+    float: right;
+    width: 40%;
+    height: 22px;
+    color: white;
+    background: none;
+    border: none;
+    border-bottom: 2px solid #FF8C00;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+  }
+
+  #iSearch:focus {
+    float: right;
+    width: 80%;
+    height: 22px;
+    color: white;
+    background: none;
+    border: none;
+    border-bottom: 2px solid #FF8C00;
   }
 
   #bottunSearch {
-    float: left;
+    float: right;
     border: none;
     cursor: pointer;
-    height: 24px;
     width: 24px;
-    background-color: white;
   }
 
   .colorWhite {
@@ -125,13 +140,14 @@
 
 @media screen and (min-width: 1361px) {
   body {
-    margin: 0;
+    width: 80%;
+    margin: auto;
     padding: 0;
   }
 
   header {
     margin: auto;
-    width: 80%;
+    width: 100%;
     height: 150px;
     background-color: black;
   }
@@ -217,29 +233,48 @@
   /*Rechercher :*/
 
   #search {
-    margin: 0 0 0 74%;
-    padding: 20px 0 0 0;
-    width: 25%;
-    height: 30px;
+    float: right;
+    margin: 20px 10% 0 0;
+    padding: 0;
+    width: 30%;
+    height: 20px;
   }
 
   #iSearch {
-    float: left;
-    width: 70%;
-    height: 25px;
+    float: right;
+    width: 40%;
+    height: 27px;
     font-size: 18px;
+    color: white;
+    background: none;
+    border: none;
+    border-bottom: 2px solid #FF8C00;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+  }
+
+  #iSearch:focus {
+    float: right;
+    width: 80%;
+    height: 27px;
+    color: white;
+    background: none;
+    border: none;
+    border-bottom: 2px solid #FF8C00;
   }
 
   #bottunSearch {
-    float: left;
+    float: right;
     border: none;
     cursor: pointer;
-    height: 29px;
     width: 29px;
-    background-color: white;
   }
 
   .colorWhite {
     color: white;
   }
+}
+
+::-webkit-input-placeholder {
+color: #ffffff;
 }
