--- a/css/content.css
+++ b/css/content.css
@@ -4,11 +4,10 @@
 }
 
 .window {
-  float: right;
   margin: 20px auto;
   padding: 0;
-  width: 65%;
-  height: 310px;
+  width: auto;
+  height: 25%;
   border: 5px solid #151515;
 }
 
@@ -20,22 +19,36 @@
   background-color: #151515;
 }
 
-#pc {
+.mise_page {
   overflow: hidden;
-  padding: 10px 0 0 50px;
+  width: 100%;
+  height: 100%;
+  list-style: none;
 }
 
-.pc {
+.articleLeft {
   float: left;
+  padding: 1% 4% 1% 8%;
+  width: 15%;
+  height: 100%;
 }
 
-.lien {
-  padding: 10px 35px;
+.articleMiddle {
+  float: left;
+  padding: 1% 4%;
+  width: 15%;
+  height: 100%;
+}
+
+.articleRigth {
+  float: left;
+  padding: 1% 8% 1% 4%;
+  width: 15%;
+  height: 100%;
 }
 
 .jacket {
-  width: 150px;
-  height: 250px;
+  width: 100%;
 }
 
 h1 {
