--- a/css/header.css
+++ b/css/header.css
@@ -7,7 +7,7 @@
   body {
     margin: 0;
     padding: 0;
-    background-color: #eaeaea;
+    background-color: #AAAAAA;
   }
 
   header {
@@ -144,7 +144,8 @@
     width: 80%;
     margin: auto;
     padding: 0;
-    background-color: #eaeaea;
+    background-color: #AAAAAA;
+    
   }
 
   header {
