--- a/css/content.css
+++ b/css/content.css
@@ -1,13 +1,14 @@
 #content {
-  margin: auto;
-  width: 100%;
+  float: right;
+  margin-right: 3%;
+  width: 60%;
 }
 
 .window {
   margin: 20px auto;
   padding: 0;
   width: auto;
-  height: 25%;
+  height: 15%;
   border: 5px solid #151515;
 }
 
@@ -15,7 +16,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 40px;
+  height: 30px;
   background-color: #151515;
 }
 
@@ -49,19 +50,19 @@
 
 .jacket {
   width: 100%;
+  height: 200px;
 }
 
 h1 {
   float: left;
-  padding: 0 0 0 20px;
-  text-align: left;
-  font-size: 30px;
+  margin: 2px 0 0 20px;
+  font-size: 20px;
   color: #FF8C00;
 }
 
 .redirection_window {
   float: right;
-  margin: 5px 20px 5px 0;
+  margin: 2px 20px 5px 0;
   font-size: 20px;
   font-weight: bold;
   color: #EAEAEA;
