--- a/css/footer.css
+++ b/css/footer.css
@@ -9,6 +9,17 @@
     background-color: #151515;
   }
 
+  .lien {
+    text-decoration: none;
+    font-size: 15px;
+    color: #eaeaea;
+  }
+
+  .lien:hover {
+    text-decoration: underline;
+    color: #FF8C00;
+  }
+
   #copyright {
     text-align: center;
   }
