--- a/css/content.css
+++ b/css/content.css
@@ -65,7 +65,7 @@ h1 {
   margin: 2px 20px 5px 0;
   font-size: 20px;
   font-weight: bold;
-  color: #EAEAEA;
+  color: #FFFFFF;
 }
 
 .redirection_window:hover {
