--- a/css/footer.css
+++ b/css/footer.css
@@ -5,14 +5,14 @@
     width: 100%;
     margin: auto;
     padding: 0;
-    color: #eaeaea;
+    color: #FFFFFF;
     background-color: #151515;
   }
 
   .lien {
     text-decoration: none;
     font-size: 15px;
-    color: #eaeaea;
+    color: #FFFFFF;
   }
 
   .lien:hover {
@@ -32,7 +32,7 @@
     width: 100%;
     margin: auto;
     padding: 0;
-    color: #eaeaea;
+    color: #FFFFFF;
     background-color: #151515;
   }
 
