--- a/css/footer.css
+++ b/css/footer.css
@@ -1,42 +1,63 @@
-@media screen and (min-width: 800px) and (max-width: 1360px) {
+footer {
+  position: absolute;
+  bottom: 0;
+  color: #FFFFFF;
+  background-color: #151515;
+}
+
+.lien {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.lien:hover {
+  text-decoration: underline;
+  color: #FF8C00;
+}
+
+#copyright {
+  text-align: center;
+}
+
+
+@media screen and (max-width: 1023px) {
   footer {
-    float: left;
-    bottom: 0;
     width: 100%;
-    margin: auto;
+    margin-top: 10px;
     padding: 0;
-    color: #FFFFFF;
-    background-color: #151515;
-  }
-
-  .lien {
-    text-decoration: none;
     font-size: 15px;
-    color: #FFFFFF;
-  }
-
-  .lien:hover {
-    text-decoration: underline;
-    color: #FF8C00;
   }
 
   #copyright {
-    text-align: center;
+    margin: 10px 0;
+    font-size: 15px;
   }
 }
 
-@media screen and (min-width: 1361px) {
+
+@media screen and (min-width: 1024px) and (max-width: 1360px) {
   footer {
-    float: left;
-    bottom: 0;
     width: 100%;
-    margin: auto;
+    margin-top: 10px;
     padding: 0;
-    color: #FFFFFF;
-    background-color: #151515;
   }
 
   #copyright {
-    text-align: center;
+    margin: 10px 0;
+    font-size: 18px;
+  }
+}
+
+
+@media screen and (min-width: 1361px) {
+  footer {
+    width: 100%;
+    margin: 10px auto 0 auto;
+    padding: 0;
+  }
+
+  #copyright {
+    margin: 10px 0;
+    font-size: 20px;
   }
 }
