--- a/css/header.css
+++ b/css/header.css
@@ -112,7 +112,7 @@ a {
 @media screen and (max-width: 1023px) {
   header {
     width: 100%;
-    height: 35px;
+    height: 40px;
   }
 
   #nav {
@@ -120,7 +120,7 @@ a {
     z-index: 1;
     right: 0;
     display: none;
-    margin: 35px 0 0 0;
+    margin: 40px 0 0 0;
     padding: 0 5px;
     width: 100%;
     background-color: #151515;
@@ -131,16 +131,15 @@ a {
   #title {
     padding: 5px 0 0 2%;
     width: auto;
-    height: 25px;
   }
 
   #aTitle {
-    font-size: 20px;
+    font-size: 25px;
   }
 
   .navbar_toggler {
     float: right;
-    margin: 2px 2% 0 0;
+    margin: 3.5px 2% 0 0;
     display: inline-block;
     background-color: #151515;
     border: 1px solid white;
@@ -164,17 +163,19 @@ a {
   }
 
   .liLogin {
-    margin: 5px 0;
+    margin: 2% 0;
   }
 
   .aLogin {
-    margin: 2px;
+    display: block;
+    width: 120px;
+    font-size: 20px;
+    text-align: center;
     border: 2px solid #FF8C00;
   }
 
   #imgLogin {
-    width: 90px;
-    height: 90px;
+    display: none;
   }
 
   /*Panier*/
