--- a/css/content.css
+++ b/css/content.css
@@ -3,7 +3,7 @@
 }
 
 #banniere {
-  position: absolute;
+  float: left;
   background-color: #151515;
 }
 
@@ -13,7 +13,11 @@
 }
 
 #content {
-  position: relative;
+  float: left;
+}
+
+#img_best:hover {
+  filter: opacity(0.5);
 }
 
 .window {
@@ -39,6 +43,10 @@
 
 .articleRigth {
   float: left;
+}
+
+.jacket {
+  border: 1px solid #151515;
 }
 
 .jacket:hover {
@@ -67,8 +75,7 @@ h1 {
   }
 
   #banniere {
-    top: 55px;
-    left: 1%;
+    margin: 5% 0 0 2%;
     width: 25%;
     height: 40%;
     border: 3px solid #151515;
@@ -81,12 +88,11 @@ h1 {
 
   #img_best {
     width: 100%;
-    height: 91%;
+    height: 100%;
   }
 
   #content {
-    padding-bottom: 80px;
-    left: 30%;
+    margin: 0 0 0 2%;
     width: 69%;
   }
 
@@ -110,19 +116,19 @@ h1 {
   }
 
   .articleLeft {
-    padding: 1% 1% 1% 2%;
+    padding: 1% 1% 0 2%;
     width: 22.5%;
     height: 100%;
   }
 
   .articleMiddle {
-    padding: 1% 1%;
+    padding: 1% 1% 0 1%;
     width: 22.5%;
     height: 50%;
   }
 
   .articleRigth {
-    padding: 1% 2% 1% 1%;
+    padding: 1% 2% 0 1%;
     width: 22.5%;
     height: 50%;
   }
@@ -150,8 +156,7 @@ h1 {
   }
 
   #banniere {
-    top: 90px;
-    left: 5%;
+    margin: 2% 0 0 5%;
     width: 25%;
     height: 40%;
     border: 3px solid #151515;
@@ -168,8 +173,7 @@ h1 {
   }
 
   #content {
-    padding-bottom: 80px;
-    left: 35%;
+    margin: 0 0 2% 5%;
     width: 60%;
   }
 
@@ -193,20 +197,20 @@ h1 {
   }
 
   .articleLeft {
-    padding: 1% 4% 1% 8%;
-    width: 15%;
+    padding: 1% 2% 1% 4%;
+    width: 20%;
     height: 100%;
   }
 
   .articleMiddle {
-    padding: 1% 4%;
-    width: 15%;
+    padding: 1% 2%;
+    width: 20%;
     height: 100%;
   }
 
   .articleRigth {
-    padding: 1% 8% 1% 4%;
-    width: 15%;
+    padding: 1% 4% 1% 2%;
+    width: 20%;
     height: 100%;
   }
 
@@ -233,8 +237,7 @@ h1 {
   }
 
   #banniere {
-    top: 90px;
-    left: 5%;
+    margin: 2% 0 0 5%;
     width: 25%;
     height: 45%;
     border: 3px solid #151515;
@@ -251,8 +254,7 @@ h1 {
   }
 
   #content {
-    padding-bottom: 80px;
-    left: 35%;
+    margin: 0 0 2% 5%;
     width: 60%;
   }
 
