--- a/css/default.css
+++ b/css/default.css
@@ -15,7 +15,15 @@ body {
 
 #main {
   position: absolute;
+  height: auto !important;
   min-height: 100%;
+  height: 100%;
+  margin: 0 auto;
+  padding-bottom: 50px;
+}
+
+#push {
+  height: 100px;
 }
 
 @media screen and (min-width: 1361px) {
