--- a/css/footer.css
+++ b/css/footer.css
@@ -23,8 +23,7 @@ footer {
 @media screen and (max-width: 1023px) {
   footer {
     width: 100%;
-    margin-top: 10px;
-    padding: 0;
+    height: 56px;
     font-size: 15px;
   }
 
@@ -38,8 +37,7 @@ footer {
 @media screen and (min-width: 1024px) and (max-width: 1360px) {
   footer {
     width: 100%;
-    margin-top: 10px;
-    padding: 0;
+    height: 60px;
   }
 
   #copyright {
@@ -52,8 +50,7 @@ footer {
 @media screen and (min-width: 1361px) {
   footer {
     width: 100%;
-    margin: 10px auto 0 auto;
-    padding: 0;
+    height: 64px;
   }
 
   #copyright {
