--- a/css/form.css
+++ b/css/form.css
@@ -9,8 +9,6 @@ body {
 }
 
 #form {
-  margin: auto;
-  width: 50%;
   background-color: #4A4A4A;
   border: 5px solid #151515;
   box-shadow: 4px 4px 0px #505050;
@@ -18,58 +16,31 @@ body {
 }
 
 h1 {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 60px;
   background-color: #151515;
   text-align: center;
-  font-size: 40px;
   color: #FF8C00;
 }
 
 .list {
-  margin: 5% 0 0 0;
   list-style: none;
 }
 
 .ligne_list {
   display: block;
-  margin: 0 0 3% 0;
 }
 
 .title_list {
   float: left;
-  margin: 1% 0 0 7%;
   display: block;
-  width: 40%;
-  height: 30px;
-  font-size: 20px;
   color: #A1A1A1;
   text-decoration: underline;
 }
 
-.input {
-  margin: 0 0 0 6%;
-  width: 40%;
-  height: 30px;
-}
-
 .input:value {
   color: black;
-  font-size: 18px;
-}
-
-.textarea {
-  margin: 0 0 0 6%;
-  width: 87%;
-  height: 60px;
 }
 
 .button {
-  margin: 3% 0 3% 3%;
-  width: 45%;
-  height: 30px;
   background-color: #151515;
   border: 2px solid #151515;
   border-radius: 5px;
@@ -77,16 +48,183 @@ h1 {
 }
 
 .button:hover {
-  margin: 3% 0 3% 3%;
-  width: 45%;
-  height: 30px;
   background-color: #151515;
   border: 2px solid #151515;
   border-radius: 5px;
   color: #FF8C00;
 }
 
-p {
-  margin: auto;
-  width: 30%;
+
+@media screen and (max-width: 1023px) {
+  #form {
+    margin: auto;
+    width: 95%;
+    box-shadow: none;
+  }
+
+  h1 {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 60px;
+    font-size: 40px;
+  }
+
+  .list {
+    margin: 5% 0 0 0;
+  }
+
+  .ligne_list {
+    margin: 0 0 3% 0;
+  }
+
+  .title_list {
+    margin: 1% 0 0 7%;
+    width: 40%;
+    height: 30px;
+    font-size: 20px;
+  }
+
+  .input {
+    margin: 0 0 0 6%;
+    width: 40%;
+    height: 30px;
+  }
+
+  .input:value {
+    font-size: 18px;
+  }
+
+  .textarea {
+    margin: 0 0 0 6%;
+    width: 87%;
+    height: 60px;
+  }
+
+  .button {
+    margin: 3% 0 3% 3%;
+    width: 100px;
+    height: 30px;
+  }
+
+  p {
+    margin: auto;
+    width: 30%;
+  }
+}
+
+
+@media screen and (min-width: 1024px) and (max-width: 1360px) {
+  #form {
+    margin: auto;
+    width: 50%;
+  }
+
+  h1 {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 60px;
+    font-size: 40px;
+  }
+
+  .list {
+    margin: 5% 0 0 0;
+  }
+
+  .ligne_list {
+    margin: 0 0 3% 0;
+  }
+
+  .title_list {
+    margin: 1% 0 0 7%;
+    width: 40%;
+    height: 30px;
+    font-size: 20px;
+  }
+
+  .input {
+    margin: 0 0 0 6%;
+    width: 40%;
+    height: 30px;
+  }
+
+  .input:value {
+    font-size: 18px;
+  }
+
+  .textarea {
+    margin: 0 0 0 6%;
+    width: 87%;
+    height: 60px;
+  }
+
+  .button {
+    margin: 3% 0 3% 3%;
+    width: 45%;
+    height: 30px;
+  }
+
+  p {
+    margin: auto;
+    width: 30%;
+  }
+}
+
+
+@media screen and (min-width: 1361px) {
+  #form {
+    margin: auto;
+    width: 50%;
+  }
+
+  h1 {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 60px;
+    font-size: 40px;
+  }
+
+  .list {
+    margin: 5% 0 0 0;
+  }
+
+  .ligne_list {
+    margin: 0 0 3% 0;
+  }
+
+  .title_list {
+    margin: 1% 0 0 7%;
+    width: 40%;
+    height: 30px;
+    font-size: 20px;
+  }
+
+  .input {
+    margin: 0 0 0 6%;
+    width: 40%;
+    height: 30px;
+  }
+
+  .input:value {
+    font-size: 18px;
+  }
+
+  .textarea {
+    margin: 0 0 0 6%;
+    width: 87%;
+    height: 60px;
+  }
+
+  .button {
+    margin: 3% 0 3% 3%;
+    width: 40%;
+    height: 30px;
+  }
+
+  p {
+    margin: auto;
+    width: 30%;
+  }
 }
