--- a/css/profil.css
+++ b/css/profil.css
@@ -1,71 +1,49 @@
 fieldset {
   float: left;
-  margin: 2% 0 2% 5%;
   border: 2px solid #000000;
   box-shadow: 2px 2px 0px #505050;
 }
 
 h1 {
-  margin: 1% 0 0 0;
   text-align: center;
-  font-size: 40px;
   font-weight: bold;
 }
 
 hr {
-  height: 2px;
-  margin: 2% 2% 0 2%;
-  padding: 0;
   color: #000;
   background-color: #000;
   border: 0;
 }
 
 .info_title {
-  margin: 1% 0 0 0;
   text-align: center;
-  font-size: 25px;
   font-weight: bold;
 }
 
 #info {
   float: left;
-  margin: 2% 0 2% 5%;
-  width: 25%;
   border: 2px solid #000000;
   box-shadow: 2px 2px 0px #505050;
-  font-size: 20px;
   background-color: #AAAAAA;
 }
 
 .icon {
   float: left;
-  margin: 5% 0 0 2%;
-  width: 50px;
-  height: 50px;
 }
 
 .info_top {
   float: left;
   display: block;
-  margin: 5% 0 0 2%;
-  width: 60%;
-  font-size: 20px;
 }
 
 .info {
   float: left;
   display: block;
-  margin: 2% 0 0 2%;
-  width: 60%;
-  font-size: 20px;
 }
 
 .a_info {
   float: left;
-  margin: 2% 0 2% 2%;
   color: #103090;
-  font-size: 18px;
   font-weight: bold;
 }
 
@@ -74,28 +52,17 @@ hr {
 }
 
 #edit {
-  width: 60%;
   background-color: #AAAAAA;
 }
 
 .label {
   display: inline-block;
-  margin: 5% 5% 0 5%;
-  width: 20%;
-  font-size: 20px;
   font-weight: bold;
-}
-
-.preview {
-  margin: 5% 0 0 0;
-  width: 50px;
-  height: 50px;
 }
 
 .label-file {
   cursor: pointer;
   color: #103090;
-  font-size: 18px;
   font-weight: bold;
 }
 
@@ -104,9 +71,6 @@ hr {
 }
 
 .input_text {
-  margin: 5% 0 0 0;
-  width: 50%;
-  height: 20px;
   border: 1px solid #000000;
   box-shadow: 1px 1px 0px #505050;
 }
@@ -117,7 +81,6 @@ hr {
 
 .a_pass {
   color: #103090;
-  font-size: 18px;
   font-weight: bold;
 }
 
@@ -126,8 +89,6 @@ hr {
 }
 
 .button {
-  width: 15%;
-  height: 30px;
   background-color: #151515;
   border: 2px solid #151515;
   border-radius: 5px;
@@ -139,6 +100,292 @@ hr {
 }
 
 .centrage {
-  margin: 5% 0 2% 0;
   text-align: center;
+}
+
+
+@media screen and (max-width: 1023px) {
+  #main{
+    width: 100%;
+    padding-bottom: 100px;
+  }
+
+  fieldset {
+    margin: 2%;
+  }
+
+  h1 {
+    margin: 1% 0 0 0;
+    font-size: 40px;
+  }
+
+  hr {
+    height: 2px;
+    margin: 2% 2% 0 2%;
+    padding: 0;
+  }
+
+  .info_title {
+    margin: 1% 0 0 0;
+    font-size: 25px;
+  }
+
+  #info {
+    margin: 2% 2%;
+    width: 96%;
+    font-size: 20px;
+  }
+
+  .icon {
+    margin: 5% 0 0 2%;
+    width: 50px;
+    height: 50px;
+  }
+
+  .info_top {
+    margin: 5% 0 0 2%;
+    width: 60%;
+    font-size: 20px;
+  }
+
+  .info {
+    margin: 2% 0 0 2%;
+    width: 60%;
+    font-size: 20px;
+  }
+
+  .a_info {
+    margin: 2% 0 2% 2%;
+    font-size: 18px;
+  }
+
+  #edit {
+    margin: 0 0 0 2%;
+    width: 96%;
+  }
+
+  .label {
+    display: block;
+    margin: 5% 5% 0 5%;
+    width: 50%;
+    font-size: 20px;
+  }
+
+  .preview {
+    margin: 5% 0 0 5%;
+    width: 50px;
+    height: 50px;
+  }
+
+  .label-file {
+    margin: 0 0 0 5%;
+    font-size: 18px;
+  }
+
+  .input_text {
+    margin: 5% 0 0 5%;
+    width: 50%;
+    height: 20px;
+  }
+
+  .a_pass {
+    display: inline-block;
+    margin: 5% 0 0 5%;
+    font-size: 18px;
+  }
+
+  .button {
+    width: 100px;
+    height: 30px;
+  }
+
+  .centrage {
+    margin: 5% 0 2% 0;
+  }
+}
+
+
+@media screen and (min-width: 1024px) and (max-width: 1360px) {
+  #main {
+    width: 100%;
+  }
+
+  fieldset {
+    margin: 2% 0 2% 5%;
+  }
+
+  h1 {
+    margin: 1% 0 0 0;
+    font-size: 40px;
+  }
+
+  hr {
+    height: 2px;
+    margin: 2% 2% 0 2%;
+    padding: 0;
+  }
+
+  .info_title {
+    margin: 1% 0 0 0;
+    font-size: 25px;
+  }
+
+  #info {
+    margin: 2% 0 2% 5%;
+    width: 25%;
+    font-size: 20px;
+  }
+
+  .icon {
+    margin: 5% 0 0 2%;
+    width: 50px;
+    height: 50px;
+  }
+
+  .info_top {
+    margin: 5% 0 0 2%;
+    width: 60%;
+    font-size: 20px;
+  }
+
+  .info {
+    margin: 2% 0 0 2%;
+    width: 60%;
+    font-size: 20px;
+  }
+
+  .a_info {
+    margin: 2% 0 2% 2%;
+    font-size: 18px;
+  }
+
+  #edit {
+    width: 60%;
+  }
+
+  .label {
+    margin: 5% 5% 0 5%;
+    width: 20%;
+    font-size: 20px;
+  }
+
+  .preview {
+    margin: 5% 0 0 0;
+    width: 50px;
+    height: 50px;
+  }
+
+  .label-file {
+    font-size: 18px;
+  }
+
+  .input_text {
+    margin: 5% 0 0 0;
+    width: 50%;
+    height: 20px;
+  }
+
+  .a_pass {
+    font-size: 18px;
+  }
+
+  .button {
+    width: 15%;
+    height: 30px;
+  }
+
+  .centrage {
+    margin: 5% 0 2% 0;
+  }
+}
+
+
+@media screen and (min-width: 1361px) {
+  fieldset {
+    margin: 2% 0 2% 5%;
+  }
+
+  h1 {
+    margin: 1% 0 0 0;
+    font-size: 40px;
+  }
+
+  hr {
+    height: 2px;
+    margin: 2% 2% 0 2%;
+    padding: 0;
+  }
+
+  .info_title {
+    margin: 1% 0 0 0;
+    font-size: 25px;
+  }
+
+  #info {
+    margin: 2% 0 2% 5%;
+    width: 25%;
+    font-size: 20px;
+  }
+
+  .icon {
+    margin: 5% 0 0 2%;
+    width: 50px;
+    height: 50px;
+  }
+
+  .info_top {
+    margin: 5% 0 0 2%;
+    width: 60%;
+    font-size: 20px;
+  }
+
+  .info {
+    margin: 2% 0 0 2%;
+    width: 60%;
+    font-size: 20px;
+  }
+
+  .a_info {
+    margin: 2% 0 2% 2%;
+    font-size: 18px;
+  }
+
+  #edit {
+    width: 60%;
+  }
+
+  .label {
+    margin: 5% 5% 0 5%;
+    width: 20%;
+    font-size: 20px;
+  }
+
+  .preview {
+    margin: 5% 0 0 0;
+    width: 50px;
+    height: 50px;
+  }
+
+  .label-file {
+    font-size: 18px;
+  }
+
+  .input_text {
+    margin: 5% 0 0 0;
+    width: 50%;
+    height: 20px;
+  }
+
+  .a_pass {
+    font-size: 18px;
+  }
+
+  .button {
+    width: 15%;
+    height: 30px;
+  }
+
+  .centrage {
+    margin: 5% 0 2% 0;
+  }
 }
