update 404 and modifie password

--- a/css/default.css
+++ b/css/default.css
@@ -27,6 +27,20 @@ body {
 }
 
 
+@media screen and (max-width: 1023px) {
+  #main {
+    width: 100%;
+  }
+}
+
+
+@media screen and (min-width: 1024px) and (max-width: 1360px) {
+  #main {
+    width: 100%;
+  }
+}
+
+
 @media screen and (min-width: 1361px) {
   #main {
     left: 10%;
