--- a/css/default.css
+++ b/css/default.css
@@ -30,6 +30,7 @@ body {
 @media screen and (max-width: 1023px) {
   #main {
     width: 100%;
+    padding-bottom: 100px;
   }
 }
 
@@ -37,6 +38,7 @@ body {
 @media screen and (min-width: 1024px) and (max-width: 1360px) {
   #main {
     width: 100%;
+    padding-bottom: 100px;
   }
 }
 
@@ -45,5 +47,6 @@ body {
   #main {
     left: 10%;
     width: 80%;
+    padding-bottom: 100px;
   }
 }
