--- a/css/recherche_game.css
+++ b/css/recherche_game.css
@@ -31,6 +31,10 @@ h1 {
   border-right: 2px solid #FF8C00;
 }
 
+.img_list:hover {
+  filter: opacity(0.5);
+}
+
 .label_list_recherche {
   float: left;
   color: #FFFFFF;
